ปรับโค้ด schematic_map_full.html

--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -4966,6 +4966,7 @@
 
     this.setCctvList = cctvList => {
       this.cctvList = cctvList;
+      console.log('CCTV List Set');
     }
 
     this.setCctvVisible = visible => {
