ปรับโค้ด schematic_map_full.html

--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -4965,7 +4965,8 @@
     };
 
     this.setCctvList = cctvList => {
-      this.cctvList = cctvList;
+      //this.cctvList = cctvList;
+      console.log(cctvList);
       console.log('CCTV List Set');
     }
 
