ปรับโค้ด schematic_map_full.html

--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -4971,7 +4971,7 @@
     }
 
     this.setCctvVisible = visible => {
-      //fetchCctv();
+      fetchCctv();
 
       this.showCctv = visible;
       this.drawMapMarker();
