handle กดหมุด cctv ใน schematic maps

--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -5292,7 +5292,10 @@
       editMode,
     });
 
-    //$('#logo').hide();
+    if (!backendMode) {
+      $('#logo').hide();
+    }
+    
     $("#cb-toggle-cctv").change(function () {
       schematicMap.setCctvVisible(this.checked);
     });
