app: finish toll plaza bottom sheet web: ปรับสีเส้น schematic maps

--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -4861,7 +4861,8 @@
         } else if (trafficIndex < 0.5) {
           color = '#EB222C';
         } else if (trafficIndex < 0.75) {
-          color = '#FDBD02';
+          //color = '#FDBD02';
+          color = '#F7882C';
         } else {
           color = '#22B573';
         }
