--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -3015,6 +3015,7 @@
     const urlParams = new URLSearchParams(window.location.search);
     const backendMode = parseInt(urlParams.get('backend')) === 1;
     const editMode = parseInt(urlParams.get('edit')) === 1;
+    const nightMode = parseInt(urlParams.get('night')) === 1;
 
     schematicMap = new SchematicMap({
       initialScale: 1.3,
@@ -3025,6 +3026,10 @@
     if (backendMode) {
       $('#logo').show();
       $('#button-menu').show();
+    }
+    if (nightMode) {
+      schematicMap.setNightMode(true);
+      $("#cb-toggle-night-mode,#cb-toggle-night-mode-overlay").prop('checked', true);
     }
 
     $("#cb-toggle-cctv,#cb-toggle-cctv-overlay").change(function () {
