ปรับ flow ตอนเปิดแอพ

--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -3041,7 +3041,7 @@
       schematicMap.setNightMode(this.checked);
     });
 
-    LOADED.postMessage();
+    //LOADED.postMessage();
   });
 
   function openNav() {
