--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -2552,11 +2552,14 @@
 </script>
 
 <script>
-  function SchematicMap({initialScale, backendMode, editMode}) {
+  function SchematicMap({initialScale, backendMode, editMode, nightMode}) {
     const self = this;
+    const NIGHT_MODE_BG_COLOR = '#080818';
+
     this.scale = initialScale;
     this.backendMode = backendMode;
     this.editMode = editMode;
+    this.nightMode = nightMode;
 
     this.mainContainer = $('#main-container');
     this.svgContainer = $('#svg-container');
@@ -2612,6 +2615,18 @@
       return Object.keys(obj).length === 0 && obj.constructor === Object;
     }
 
+    this.clearChunk = function () {
+      for (let i = 1; i <= 502; i++) {
+        const chunk = $(`#chunk-${i}`);
+        if (chunk) {
+          //const color = this.isObjectEmpty(this.dayColors) ? 'white' : NIGHT_MODE_BG_COLOR;
+          color = 'grey';
+          chunk.css('stroke', color);
+          chunk.css('fill', color);
+        }
+      }
+    };
+
     this.dayColors = {};
     this.setNightColor = function (selector, attr, value) {
       this.dayColors[`${selector}_${attr}`] = $(selector).css(attr);
@@ -2637,7 +2652,7 @@
         if (!this.isObjectEmpty(this.dayColors)) return;
 
         //2A2E43 : dark color ในแอพ
-        this.setNightColor('svg', 'background-color', '#080818');
+        this.setNightColor('svg', 'background-color', NIGHT_MODE_BG_COLOR);
 
         let color = '#222222';
         this.setNightColor('.cls-6', 'stroke', color);
@@ -3021,7 +3036,10 @@
       initialScale: 1.3,
       backendMode,
       editMode,
+      nightMode,
     });
+
+    schematicMap.clearChunk();
 
     if (backendMode) {
       $('#logo').show();
