server: ปรับ initial scale บนแอพ

--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -3033,7 +3033,7 @@
     const nightMode = parseInt(urlParams.get('night')) === 1;
 
     schematicMap = new SchematicMap({
-      initialScale: 1.3,
+      initialScale: backendMode ? 1.3 : 1,
       backendMode,
       editMode,
       nightMode,
