--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -139,7 +139,7 @@
     <div id="svg-wrapper" style="position: relative; display: flex; width: 100%; height: 100%; border: solid 0px #ddd">
       <!--<div id="data" style="position: fixed; top: 0; right: 0; width: 260px; height: 100%; padding: 5px; background-color: navajowhite; border: 1px solid #ccc; overflow: auto"></div>-->
 
-      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 4621.41 5134"
+      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 4621.41 5134" width="4621.41" height="5134"
            style="height: 100%; width: 100%; border: 0px solid blue; background-color: #fffff8; enable-background:new 0 0 4621.4 5134;">
 
         <style type="text/css">.cls-1 {
